--- a/blog/templates/blog/post_archive_month.html
+++ b/blog/templates/blog/post_archive_month.html
@@ -1,12 +1,110 @@
 {% extends parent_template|default:"blog/base_blog.html" %}
 
 {% block title %}
-{{ block.super }} - {{ year|date:"Y" }} Posts
+{{ block.super }} - {{ month|date:"F Y" }} Posts
 {% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-md-8">
+
+        <div class="blog-btn-new-blog hidden">
+            <button type="button" class="btn btn-info">
+                <a href="{% url 'blog_post_create' %}">
+                    Write New Blog Post
+                </a>
+            </button>
+        </div>
+
+        <h2 class="blog-post-archive-month-h2">All Posts for {{ month|date:'F Y' }}</h2>
+        {% for post in post_list %}
+        <article>
+            <header>
+                <h3 class="blog-post-archive-month-h3">
+                    <a href="{{ post.get_absolute_url }}">
+                        {{ post.title|title }}
+                    </a>
+                </h3>
+                <p>
+                    Written on:
+                    <time datetime="{{ post.pub_date|date:'Y-m-d' }}">
+                        {{ post.pub_date|date:"l, F j, Y" }}
+                    </time>
+                </p>
+            </header>
+            <p>
+                {{ post.text|truncatewords:20 }}
+            </p>
+            <p>
+                <a href="{{ post.get_absolute_url }}">
+                    Read more&hellip;
+                </a>
+            </p>
+            <div class="blog-post-edit-btn btn btn-info">
+                <a href="{{ post.get_update_url }}">
+                    Edit Post
+                </a>
+            </div>
+            <div class="blog-post-delete-btn btn btn-danger">
+                <a href="{{ post.get_delete_url }}">
+                    Delete Post
+                </a>
+            </div>
+        </article>
+        {% endfor %}
+
+    </div><!-- eight columns -->
+    <div class="col-md-4">
+
+        <p>
+            <a href="{% url 'blog_post_archive_year' month|date:'Y' %}">
+                All Posts from {{ month|date:"Y" }}
+            </a>
+        </p>
+        <p>
+            <a href="{% url 'blog_post_list' %}">
+                Latest Posts
+            </a>
+        </p>
+
+        <div class="blog-btn-new-blog">
+            <button type="button" class="btn btn-info">
+                <a href="{% url 'blog_post_create' %}">
+                    Write New Blog Post
+                </a>
+            </button>
+        </div>
+
+    </div><!--/ 4  -->
+
+</div><!--/ row  -->
+<div class="row">
+
+    <div class="col-md-12">
+        <nav aria-label="...">
+            <ul class="pager">
+                {% if previous_month %}
+                <li>
+                    <a href="{% url 'blog_post_archive_month'
+                        previous_month|date:'Y' previous_month|date:'m' %}">
+                        <span aria-hidden="true">&larr;</span>
+                        Posts from {{ previous_month|date:'F Y' }}
+                    </a>
+                </li>
+                {% endif %}
+                {% if next_month %}
+                <li>
+                    <a href="{% url 'blog_post_archive_month'
+                        next_month|date:'Y' next_month|date:'m' %}">
+                        Posts from {{ next_month|date:'F Y' }}
+                        <span aria-hidden="true">&rarr;</span>
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
+
 </div>
+
 {% endblock %}
