--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="col-md-8">
 <h2 class="blog-tags-title">Tag List</h2>
 
 <ul class="list-group">
@@ -58,5 +59,5 @@
 </ul>
 </nav>
 {% endif %}
-
+</div>
 {% endblock content %}
