Add class=blog-tag-list-btn-create to btn Create New Tag, margin-bottom=30px.

--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -26,7 +26,7 @@
         <li><em>There are currently no Tags available.</em></li>
     {% endfor %}
 </ul>
-<div class="blog-btn-margin">
+<div class="blog-tag-list-btn-create">
     <button class="btn btn-info">
         <a href="{% url 'organizer_tag_create' %}">
             Create New Tag
