Wrap content in col-md-8.

--- a/templates/site/about.html
+++ b/templates/site/about.html
@@ -5,15 +5,17 @@
 {% endblock %}
 
 {% block content %}
-<section>
-    <article>
-        <h2 class="blog-about-h2">
-            About
-        </h2>
-        <p>
-            This site created based on book "Django unleashed" author Andrew Pinkham.
-            For styling using Bootstrap Tweeter.
-        </p>
-    </article>
-</section>
+<div class="col-md-8">
+    <section>
+        <article>
+            <h2 class="blog-about-h2">
+                About
+            </h2>
+            <p>
+                This site created based on book "Django unleashed" author Andrew Pinkham.
+                For styling using Bootstrap Tweeter.
+            </p>
+        </article>
+    </section>
+</div>
 {% endblock %}
