--- a/templates/site/about.html
+++ b/templates/site/about.html
@@ -12,9 +12,9 @@
                 About
             </h2>
             <p>
-                This site created based on book "Django unleashed" author Andrew Pinkham.
-                For styling using Bootstrap Tweeter.
+                This site created based on book "Django unleashed" author<br> Andrew Pinkham.
             </p>
+            <p>For styling using <a href="https://getbootstrap.com/">Bootstrap Tweeter</a>.</p>
         </article>
     </section>
 </div>
