--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -53,7 +53,7 @@
     <p><em>No Blog Posts Available</em></p>
     {% endfor %}
     <div class="blog-btn-new-blog">
-    <button type="button" class="btn btn-info">
+    <button type="button" class="btn btn-primary">
         <a href="{% url 'blog_post_create' %}">
             Write New Blog Post
         </a>
