--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -27,8 +27,8 @@
     </li>
     {% endfor %}
 </ul>
-<div class="blog-btn-margin">
-    <button class="btn btn-info">
+<div class="blog-startup-list-btn">
+    <button class="btn btn-primary">
         <a href="{% url 'organizer_startup_create' %}">
             Create New Startup
         </a>
