--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -27,7 +27,7 @@
     {% endfor %}
 </ul>
 <div class="blog-tag-list-btn-create">
-    <button class="btn btn-info">
+    <button class="btn btn-primary">
         <a href="{% url 'organizer_tag_create' %}">
             Create New Tag
         </a>
