--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -511,3 +511,51 @@ h6, .h6 {
 .blog-tag-list-btn-create a {
     color: #fff;
 }
+
+.blog-post-archive-month-aside {
+    margin-top: 110px;
+}
+
+.blog-post-archive-month-all {
+    padding: 4px 0;
+    background-color: #349FBA;
+    text-align: center;
+    border-top: solid 1px #428BCA;
+    border-left: solid 1px #428BCA;
+    border-right: solid 1px #428BCA;
+    border-radius: 6px 6px 0 0;
+    margin: 0;
+}
+
+.blog-post-archive-month-all a {
+    color: #EDEDED;
+    display: block;
+    text-decoration: none;
+    letter-spacing: 1px;
+}
+
+.blog-post-archive-month-all a:hover {
+    background-color: #3EC0E0;
+}
+
+.blog-post-archive-month-latest {
+    padding: 4px 0;
+    background-color: #36A8C4;
+    text-align: center;
+    border-top: solid 1px #428BCA;
+    border-left: solid 1px #428BCA;
+    border-right: solid 1px #428BCA;
+    border-radius: 0  0 6px 6px;
+    margin-top: 0;
+}
+
+.blog-post-archive-month-latest a {
+    color: #EDEDED;
+    display: block;
+    text-decoration: none;
+    letter-spacing: 1px;
+}
+
+.blog-post-archive-month-latest a:hover {
+    background-color: #3EC0E0;
+}
