Update style for btn Write new blog.

--- a/blog/templates/blog/post_archive_year.html
+++ b/blog/templates/blog/post_archive_year.html
@@ -67,7 +67,7 @@
             {% endfor %}
         </ul>
         <div class="blog-btn-new-blog">
-            <button type="button" class="btn btn-info">
+            <button type="button" class="btn btn-primary">
                 <a href="{% url 'blog_post_create' %}">
                     Write New Blog Post
                 </a>
