Update style for btn Write new blog move right 70px.

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -344,6 +344,11 @@ h6, .h6 {
     color: #fff;
     font-weight: 600;
 }
+
+.blog-btn-new-blog-archive {
+    margin-left: 70px;
+}
+
 /* Startup-detail */
 .blog-startup-h3 {
     margin: 20px 0 10px 0;
