--- a/blog/templates/blog/post_archive_month.html
+++ b/blog/templates/blog/post_archive_month.html
@@ -67,7 +67,7 @@
             </a>
         </p>
 
-        <div class="blog-btn-new-blog">
+        <div class="blog-btn-new-blog blog-btn-new-blog-archive">
             <button type="button" class="btn btn-primary">
                 <a href="{% url 'blog_post_create' %}">
                     Write New Blog Post
