--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -60,4 +60,20 @@
     </button>
     </div>
 </div>
+<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+    <div class="sidebar-module sidebar-module-inset">
+        <h3>Post Archives</h3>
+    </div>
+    <div class="sidebar-module">
+        <ul>
+            {% for y in date_list %}
+            <li>
+                <a href="{% url 'blog_post_archive_year' y|date:'Y' %}">
+                    {{ y|date:"Y" }}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endblock content %}
