--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -34,6 +34,6 @@
             </a>
         </button>
     </div>
-    {% include "partials/pagination.html" %}
 </div>
+{% include "organizer/partials/pagination.html" %}
 {% endblock content %}
