--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -7,32 +7,32 @@
 
 {% block content %}
 <div class="col-md-8">
-<h2 class="blog-tags-title">Tag List</h2>
+    <h2 class="blog-tags-title">Tag List</h2>
 
-<ul class="list-group">
-    {% for tag in tag_list %}
-    <li class="list-group-item">
-        <a href="{{ tag.get_absolute_url }}">
-            {{ tag.name|title }}
-        </a>
-        <a href="{{ tag.get_update_url }}">
-            <span class="label label-info">Edit Tag</span>
-        </a>
-        <a href="{{ tag.get_delete_url }}">
-            <span class="label label-danger">Delete Tag</span>
-        </a>
-    </li>
-    {% empty %}
-        <li><em>There are currently no Tags available.</em></li>
-    {% endfor %}
-</ul>
-<div class="blog-tag-list-btn-create">
-    <button class="btn btn-primary">
-        <a href="{% url 'organizer_tag_create' %}">
-            Create New Tag
-        </a>
-    </button>
+    <ul class="list-group">
+        {% for tag in tag_list %}
+        <li class="list-group-item">
+            <a href="{{ tag.get_absolute_url }}">
+                {{ tag.name|title }}
+            </a>
+            <a href="{{ tag.get_update_url }}">
+                <span class="label label-info">Edit Tag</span>
+            </a>
+            <a href="{{ tag.get_delete_url }}">
+                <span class="label label-danger">Delete Tag</span>
+            </a>
+        </li>
+        {% empty %}
+            <li><em>There are currently no Tags available.</em></li>
+        {% endfor %}
+    </ul>
+    <div class="blog-tag-list-btn-create">
+        <button class="btn btn-primary">
+            <a href="{% url 'organizer_tag_create' %}">
+                Create New Tag
+            </a>
+        </button>
+    </div>
 </div>
-{% include "partials/pagination.html" %}
-</div>
+{% include "organizer/partials/pagination.html" %}
 {% endblock content %}
