--- a/organizer/templates/organizer/partials/pagination.html
+++ b/organizer/templates/organizer/partials/pagination.html
@@ -1,28 +1,42 @@
 {% if is_paginated %}
-<div class="col-md-8">
+<div class="col-md-12">
     <nav aria-label="...">
-    <ul class="pager">
-        {% if previous_page_url %}
+        <ul class="pager">
+            {% if first_page_url %}
+                <li>
+                    <a href="{{ first_page_url }}">
+                        First
+                    </a>
+                </li>
+            {% endif %}
+            {% if previous_page_url %}
+                <li>
+                    <a href="{{ previous_page_url }}">
+                        <span aria-hidden="true">&larr;</span>
+                        Previous
+                    </a>
+                </li>
+            {% endif %}
             <li>
-                <a href="{{ previous_page_url }}">
-                    <span aria-hidden="true">&larr;</span>
-                    Previous
-                </a>
+                Page {{ page_obj.number }}
+                of {{ paginator.num_pages }}
             </li>
-        {% endif %}
-        <li>
-            Page {{ page_obj.number }}
-            of  {{ paginator.num_pages }}
-        </li>
-        {% if next_page_url %}
-            <li>
-                <a href="{{ next_page_url }}">
-                    Next
-                    <span aria-hidden="true">&rarr;</span>
-                </a>
-            </li>
-        {% endif %}
-    </ul>
+            {% if next_page_url %}
+                <li>
+                    <a href="{{ next_page_url }}">
+                        Next
+                        <span aria-hidden="true">&rarr;</span>
+                    </a>
+                </li>
+            {% endif %}
+            {% if last_page_url %}
+                <li>
+                    <a href="{{ last_page_url }}">
+                        Last
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
     </nav>
 </div>
 {% endif %}
