--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -154,13 +154,15 @@ h6, .h6 {
   margin-bottom: 60px;
   text-align: left;
 }
+
 .pager > li > a {
-  width: 140px;
+  width: 100px;
   padding: 10px 20px;
+  margin: 0 2px;
   text-align: center;
   border-radius: 30px;
+  background-color: #DFFFFB;
 }
-
 
 /*
  * Blog posts
